work on idaholab/Malcolm#19, assigning severity to certain types of events

--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -2,21 +2,21 @@ filter {
 
   if ("cross_segment" in [tags]) {
     mutate { id => "mutate_add_field_severity_item_cross_segment"
-             add_field => { "[zeek][severity_items]" => "CONNECTION_CROSS_SEGMENT" } }
+             add_field => { "[zeek][severity_tags]" => "CONNECTION_CROSS_SEGMENT" } }
   }
 
   if ("internal_source" in [tags]) and ("internal_destination" in [tags]) {
     mutate { id => "mutate_add_field_severity_item_internal"
-             add_field => { "[zeek][severity_items]" => "CONNECTION_INTERNAL" } }
+             add_field => { "[zeek][severity_tags]" => "CONNECTION_INTERNAL" } }
   } else if ("external_source" in [tags]) and ("external_destination" in [tags]) {
     mutate { id => "mutate_add_field_severity_item_external"
-             add_field => { "[zeek][severity_items]" => "CONNECTION_EXTERNAL" } }
+             add_field => { "[zeek][severity_tags]" => "CONNECTION_EXTERNAL" } }
   } else if ("internal_source" in [tags]) and ("external_destination" in [tags]) {
     mutate { id => "mutate_add_field_severity_item_outbound"
-             add_field => { "[zeek][severity_items]" => "CONNECTION_OUTBOUND" } }
+             add_field => { "[zeek][severity_tags]" => "CONNECTION_OUTBOUND" } }
   } else if ("external_source" in [tags]) and ("internal_destination" in [tags]) {
     mutate { id => "mutate_add_field_severity_item_inbound"
-             add_field => { "[zeek][severity_items]" => "CONNECTION_INBOUND" } }
+             add_field => { "[zeek][severity_tags]" => "CONNECTION_INBOUND" } }
   }
 
   if ([zeek][filetype]) {
@@ -35,7 +35,7 @@ filter {
         ("application/x-sh" in [zeek][filetype]) or
         ("text/vbscript" in [zeek][filetype])) {
       mutate { id => "mutate_add_field_severity_file_type_high"
-               add_field => { "[zeek][severity_items]" => "FILE_TYPE_HIGH" } }
+               add_field => { "[zeek][severity_tags]" => "FILE_TYPE_HIGH" } }
     } else if (("application/binary" in [zeek][filetype]) or
                ("application/ecmascript" in [zeek][filetype]) or
                ("application/hta" in [zeek][filetype]) or
@@ -119,72 +119,126 @@ filter {
                ("text/jscript" in [zeek][filetype]) or
                ("text/rtf" in [zeek][filetype])) {
       mutate { id => "mutate_add_field_severity_file_type_medium"
-               add_field => { "[zeek][severity_items]" => "FILE_TYPE_MEDIUM" } }
+               add_field => { "[zeek][severity_tags]" => "FILE_TYPE_MEDIUM" } }
     } else {
       mutate { id => "mutate_add_field_severity_file_type"
-               add_field => { "[zeek][severity_items]" => "FILE_TYPE" } }
+               add_field => { "[zeek][severity_tags]" => "FILE_TYPE" } }
     }
   }
 
   if ([zeek_notice]) {
     if ([zeek_notice][category] == "ATTACK") {
       mutate { id => "mutate_add_field_severity_notice_mitre_attack"
-               add_field => { "[zeek][severity_items]" => "NOTICE_MITRE_ATTACK" } }
+               add_field => { "[zeek][severity_tags]" => "NOTICE_MITRE_ATTACK" } }
     } else if ([zeek_notice][category] == "Scan") {
       mutate { id => "mutate_add_field_severity_notice_scan"
-               add_field => { "[zeek][severity_items]" => "NOTICE_SCAN" } }
+               add_field => { "[zeek][severity_tags]" => "NOTICE_SCAN" } }
     } else if (([zeek_notice][category] == "FTP") or
                ([zeek_notice][category] == "HTTP") or
                ([zeek_notice][category] == "HTTPATTACKS") or
                ([zeek_notice][category] == "SSL")) {
       mutate { id => "mutate_add_field_severity_notice_protocol"
-               add_field => { "[zeek][severity_items]" => "NOTICE_PROTOCOL" } }
+               add_field => { "[zeek][severity_tags]" => "NOTICE_PROTOCOL" } }
     } else if (([zeek_notice][category] =~ /^CVE/) or
                ([zeek_notice][category] == "EternalSafety") or
                ([zeek_notice][category] == "Ripple20") or
                ([zeek_notice][category] == "Zerologon")) {
       mutate { id => "mutate_add_field_severity_notice_vuln"
-               add_field => { "[zeek][severity_items]" => "NOTICE_VULN" } }
+               add_field => { "[zeek][severity_tags]" => "NOTICE_VULN" } }
     } else {
       mutate { id => "mutate_add_field_severity_notice_other"
-               add_field => { "[zeek][severity_items]" => "NOTICE_OTHER" } }
+               add_field => { "[zeek][severity_tags]" => "NOTICE_OTHER" } }
     }
   }
 
   if ([zeek_weird]) {
     mutate { id => "mutate_add_field_severity_weird_other"
-             add_field => { "[zeek][severity_items]" => "WEIRD_OTHER" } }
+             add_field => { "[zeek][severity_tags]" => "WEIRD_OTHER" } }
   }
 
   if ([zeek][password]) {
     mutate { id => "mutate_add_field_severity_password_exists"
-             add_field => { "[zeek][severity_items]" => "PASSWORD_CLEARTEXT" } }
+             add_field => { "[zeek][severity_tags]" => "PASSWORD_CLEARTEXT" } }
   }
 
   if ([zeek_signatures]) {
     if ([zeek_signatures][engine] == 'capa') {
       mutate { id => "mutate_add_field_severity_signatures_capa"
-               add_field => { "[zeek][severity_items]" => "SIGNATURES_CAPA" } }
+               add_field => { "[zeek][severity_tags]" => "SIGNATURES_CAPA" } }
     } else if ([zeek_signatures][engine] == 'clamav') {
       mutate { id => "mutate_add_field_severity_signatures_clamav"
-               add_field => { "[zeek][severity_items]" => "SIGNATURES_CLAMAV" } }
+               add_field => { "[zeek][severity_tags]" => "SIGNATURES_CLAMAV" } }
     } else if ([zeek_signatures][engine] == 'malass') {
       mutate { id => "mutate_add_field_severity_signatures_malass"
-               add_field => { "[zeek][severity_items]" => "SIGNATURES_MALASS" } }
+               add_field => { "[zeek][severity_tags]" => "SIGNATURES_MALASS" } }
     } else if ([zeek_signatures][engine] == 'virustotal') {
       mutate { id => "mutate_add_field_severity_signatures_virustotal"
-               add_field => { "[zeek][severity_items]" => "SIGNATURES_VIRUSTOTAL" } }
+               add_field => { "[zeek][severity_tags]" => "SIGNATURES_VIRUSTOTAL" } }
     } else if ([zeek_signatures][engine] == 'yara') {
       mutate { id => "mutate_add_field_severity_signatures_yara"
-               add_field => { "[zeek][severity_items]" => "SIGNATURES_YARA" } }
+               add_field => { "[zeek][severity_tags]" => "SIGNATURES_YARA" } }
     } else {
       mutate { id => "mutate_add_field_severity_signatures_other"
-               add_field => { "[zeek][severity_items]" => "SIGNATURES_OTHER" } }
+               add_field => { "[zeek][severity_tags]" => "SIGNATURES_OTHER" } }
+    }
+  }
+
+  if (!([zeek][logType] =~ /^known/)) {
+    ruby {
+      id => "ruby_add_field_severity_insecure_protocols"
+      code => "
+        if (service = event.get('[zeek][service]')) then
+          found = 0
+          if !service.kind_of?(Array) then
+            newsrv = Array.new
+            newsrv.push(service)
+            service = newsrv
+          end
+          version = event.get('[zeek][service_version]')
+          if !version.nil? and !version.kind_of?(Array) then
+            newver = Array.new
+            newver.push(version)
+            version = newver
+          end
+          service.each do |srv|
+            if found > 0 then
+              break
+            end
+            if ['ftp', 'tftp', 'telnet', 'rlogin', 'rsh'].include?(srv) then
+              found += 1
+            elsif !version.nil? then
+              version.each do |ver|
+                if found > 0 then
+                  break
+                end
+                if (srv.eql?('ssh') and (ver.to_f < 2.0)) or
+                   (srv.eql?('smb') and (ver.to_f < 2.0)) or
+                   (srv.eql?('ntp') and (ver.to_f < 4.0)) or
+                   (srv.eql?('rfb') and (ver.to_f < 3.8)) or
+                   (srv.eql?('rdp') and (ver.to_f < 6.0)) or
+                   (srv.eql?('snmp') and (ver.to_f < 3.0)) or
+                   (srv.eql?('ldap') and (ver.to_f < 3.0)) or
+                   (srv.eql?('tls') and (!(ver.match(/TLS.*v?1\.?[23]/)))) then
+                  found += 1
+                end
+              end
+            end
+          end
+          if found > 0 then
+            sevtags = Array.new unless (sevtags = event.get('[zeek][severity_tags]'))
+            if !sevtags.kind_of?(Array) then
+              newtags = Array.new
+              newtags.push(sevtags)
+              sevtags = newtags
+            end
+            sevtags.push('PROTOCOL_OUTDATED_OR_INSECURE')
+            event.set('[zeek][severity_tags]', sevtags)
+          end
+        end"
     }
   }
 
   # "DGA_HIGH_ENTROPY": 40
-  # "PROTOCOL_OUTDATED_OR_INSECURE": 50
 
 } # filter
 
