work on idaholab/Malcolm#19, assigning severity to certain types of events

--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -1,6 +1,6 @@
 filter {
 
-  # see malcolm_event_categories_severity.yaml for mappings to severity scores
+  # see malcolm_severity.yaml for mappings to severity scores
 
   # identify cross-segment traffic based on previously-populated tag
   if ("cross_segment" in [tags]) {
@@ -267,7 +267,7 @@ filter {
     id => "ruby_calculate_final_severity_score"
     # pre-load severity score mapping in init outside of processing pipeline
     init => "
-      require 'yaml'; $severityMappings = YAML.load(File.read('/etc/malcolm_event_categories_severity.yaml'))
+      require 'yaml'; $severityMappings = YAML.load(File.read('/etc/malcolm_severity.yaml'))
     "
     # to calculate severity:
     # - look up list of severity_tags against severity score mapping (generate hash), ignoring <= 0 or missing (nil) values
