work on idaholab/Malcolm#19, assigning severity to certain types of events

--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -206,7 +206,9 @@ filter {
   # in addition to insecure/outdated protocols, append PROTOCOL_XXX to the
   # severity_tags list, where XXX is the uppercased value of zeek.service,
   # so that if the user wants to add PROTOCOL_SSH or whatever to their mapping
-  # for a custom severity value it will just work
+  # for a custom severity value it will just work. if it's not in their
+  # mapping file, it'll return with a nil value and will be removed
+  # in ruby_calculate_final_severity_score
   if (!([zeek][logType] =~ /^known/)) {
     ruby {
       id => "ruby_add_field_severity_insecure_protocols"
@@ -286,9 +288,6 @@ filter {
         event.set('[event][severity]', [sevhash.values.sum, 100].min)
       end"
   }
-
-
-
 
 } # filter
 
