work on idaholab/Malcolm#19, assigning severity to certain types of events

--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -273,7 +273,7 @@ filter {
     "
     # to calculate severity:
     # - look up list of severity_tags against severity score mapping (generate hash), ignoring <= 0 or missing (nil) values
-    # - set summed severity scores in event.severity
+    # - set summed severity scores in event.severity/risk_score/risk_score_norm
     # - set pruned severity_tags back to event.severity_tags
     code => "
       sevtags = event.get('[event][severity_tags]')
@@ -284,8 +284,9 @@ filter {
       end
       if !sevtags.nil? and (sevtags.length > 0) and ($severityMappings.length > 0) then
         sevhash = Hash[sevtags.select{|key| ($severityMappings[key].nil? ? 0 : $severityMappings[key]) > 0}.map{|key| [key, $severityMappings[key]]}]
+        sevnum = [sevhash.values.sum, 100].min
         event.set('[event][severity_tags]', sevhash.keys)
-        event.set('[event][severity]', [sevhash.values.sum, 100].min)
+        event.set('[event][severity]', sevnum)
       end"
   }
 
