--- a/logstash/maps/malcolm_severity.yaml
+++ b/logstash/maps/malcolm_severity.yaml
@@ -3,7 +3,8 @@
 "CONNECTION_INBOUND": 50
 "CONNECTION_INTERNAL": 0
 "CONNECTION_OUTBOUND": 25
-"FILE_TYPE": 5
+"DOMAIN_HIGH_ENTROPY": 0
+"FILE_TYPE": 0
 "FILE_TYPE_HIGH": 75
 "FILE_TYPE_MEDIUM": 50
 "NOTICE_VULN": 90
@@ -13,7 +14,6 @@
 "NOTICE_SCAN": 60
 "PASSWORD_CLEARTEXT": 90
 "PROTOCOL_OUTDATED_OR_INSECURE": 60
-"PROTOCOL_REMOTE_CONTROL": 70
 "SIGNATURES_CAPA": 50
 "SIGNATURES_CLAMAV": 90
 "SIGNATURES_MALASS": 90
