--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -71,6 +71,8 @@ zeek.community_id=db:zeek.community_id;kind:termfield;friendly:Zeek Connection C
 zeek.logType=db:zeek.logType;kind:termfield;friendly:Zeek Log Type;help:Zeek Log Type
 zeek.ts=db:zeek.ts;kind:termfield;friendly:Timestamp;help:Zeek Timestamp
 host.name=db:host.name;kind:termfield;friendly:Zeek Node;help:Zeek Node
+event.severity=db:event.severity;kind:integer;friendly:Severity;help:Severity
+event.severity_tags=db:event.severity_tags;kind:termfield;friendly:Severity Tags;help:Severity Tags
 
 # basic connection information
 zeek.orig_h=db:zeek.orig_h;kind:termfield;friendly:Originating host;help:Originating Host
