work on idaholab/Malcolm#19, assigning severity to certain types of events

--- a/logstash/maps/malcolm_severity.yaml
+++ b/logstash/maps/malcolm_severity.yaml
@@ -1,17 +1,19 @@
-"CONNECTION_CROSS_SEGMENT": 25
-"CONNECTION_EXTERNAL": 10
+"CONNECTION_CROSS_SEGMENT": 20
+"CONNECTION_EXTERNAL": 20
 "CONNECTION_INBOUND": 50
 "CONNECTION_INTERNAL": 0
-"CONNECTION_OUTBOUND": 25
+"CONNECTION_OUTBOUND": 20
+"CONNECTION_TUNNEL": 10
+"CONNECTION_VPN": 30
 "DOMAIN_HIGH_ENTROPY": 0
 "FILE_TYPE": 0
 "FILE_TYPE_HIGH": 75
 "FILE_TYPE_MEDIUM": 50
-"NOTICE_VULN": 90
 "NOTICE_MITRE_ATTACK": 80
 "NOTICE_OTHER": 60
 "NOTICE_PROTOCOL": 60
 "NOTICE_SCAN": 60
+"NOTICE_VULN": 90
 "PASSWORD_CLEARTEXT": 90
 "PROTOCOL_OUTDATED_OR_INSECURE": 60
 "SIGNATURES_CAPA": 50
@@ -20,4 +22,4 @@
 "SIGNATURES_OTHER": 75
 "SIGNATURES_VIRUSTOTAL": 90
 "SIGNATURES_YARA": 90
-"WEIRD_OTHER": 40
+"WEIRD_OTHER": 30
