--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -15,18 +15,32 @@ filter {
     }
 
     # inbound/outbound/internal/external connection based on previously-populated tag
-    if ("internal_source" in [tags]) and ("internal_destination" in [tags]) {
-      mutate { id => "mutate_add_field_severity_item_internal"
-               add_field => { "[event][severity_tags]" => "CONNECTION_INTERNAL" } }
-    } else if ("external_source" in [tags]) and ("external_destination" in [tags]) {
-      mutate { id => "mutate_add_field_severity_item_external"
-               add_field => { "[event][severity_tags]" => "CONNECTION_EXTERNAL" } }
-    } else if ("internal_source" in [tags]) and ("external_destination" in [tags]) {
-      mutate { id => "mutate_add_field_severity_item_outbound"
-               add_field => { "[event][severity_tags]" => "CONNECTION_OUTBOUND" } }
-    } else if ("external_source" in [tags]) and ("internal_destination" in [tags]) {
-      mutate { id => "mutate_add_field_severity_item_inbound"
-               add_field => { "[event][severity_tags]" => "CONNECTION_INBOUND" } }
+    if ([zeek][logType] != "files") {
+      # files.log is excluded here because tx_hosts and tx_hosts doesn't really indicate
+      # the direction of the connection itself
+      if ("internal_source" in [tags]) and ("internal_destination" in [tags]) {
+        mutate { id => "mutate_add_field_severity_item_internal"
+                 add_field => { "[event][severity_tags]" => "CONNECTION_INTERNAL" } }
+      } else if ("external_source" in [tags]) and ("external_destination" in [tags]) {
+        mutate { id => "mutate_add_field_severity_item_external"
+                 add_field => { "[event][severity_tags]" => "CONNECTION_EXTERNAL" } }
+      } else if ("internal_source" in [tags]) and ("external_destination" in [tags]) {
+        mutate { id => "mutate_add_field_severity_item_outbound"
+                 add_field => { "[event][severity_tags]" => "CONNECTION_OUTBOUND" } }
+      } else if ("external_source" in [tags]) and ("internal_destination" in [tags]) {
+        mutate { id => "mutate_add_field_severity_item_inbound"
+                 add_field => { "[event][severity_tags]" => "CONNECTION_INBOUND" } }
+      }
+    }
+
+    # tunneled/VPN traffic
+    if ([zeek][logType] == "tunnel") {
+      mutate { id => "mutate_add_field_severity_item_tunnel"
+               add_field => { "[event][severity_tags]" => "CONNECTION_TUNNEL" } }
+    }
+    if ([zeek][service] =~ /^(ipsec|wireguard|openvpn)/) {
+      mutate { id => "mutate_add_field_severity_item_vpn"
+               add_field => { "[event][severity_tags]" => "CONNECTION_VPN" } }
     }
 
     # these (high/medium) file types pulled from extractor_override.interesting.zeek
