--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -236,7 +236,7 @@ filter {
       # some spicy services are named like blah_udp or blah_tcp,
       # and we don't care about the _udp/_tcp suffix
       mutate { id => "mutate_gsub_field_zeek_conn_service_spicy_suffix"
-               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?$", "" ] }
+               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?(_(sha|md)\d+)?$", "" ] }
 
       if ([zeek_cols][service] == "tftp_data") {
         mutate { id => "mutate_replace_zeek_conn_service_tftp_data"
@@ -1064,7 +1064,7 @@ filter {
       # some spicy services are named like blah_udp or blah_tcp,
       # and we don't care about the _udp/_tcp suffix
       mutate { id => "mutate_gsub_field_zeek_dpd_service_spicy_suffix"
-               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?$", "" ] }
+               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?(_(sha|md)\d+)?$", "" ] }
 
       if ([zeek_cols][service] == "tftp_data") {
         mutate { id => "mutate_replace_zeek_dpd_service_tftp_data"
@@ -1897,7 +1897,7 @@ filter {
       # some spicy services are named like blah_udp or blah_tcp,
       # and we don't care about the _udp/_tcp suffix
       mutate { id => "mutate_gsub_field_zeek_known_service_spicy_suffix"
-               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?$", "" ] }
+               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?(_(sha|md)\d+)?$", "" ] }
 
       if ([zeek_cols][service] == "tftp_data") {
         mutate { id => "mutate_replace_zeek_known_service_tftp_data"
