work on idaholab/Malcolm#19, service normalization and tagging VPN connections

--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -38,9 +38,13 @@ filter {
       mutate { id => "mutate_add_field_severity_item_tunnel"
                add_field => { "[event][severity_tags]" => "CONNECTION_TUNNEL" } }
     }
-    if ([zeek][service] =~ /^(ipsec|wireguard|openvpn)/) {
-      mutate { id => "mutate_add_field_severity_item_vpn"
-               add_field => { "[event][severity_tags]" => "CONNECTION_VPN" } }
+    if (("ipsec" in [zeek][service]) or
+        ("openvpn" in [zeek][service]) or
+        ("wireguard" in [zeek][service]) or
+        ("l2tp" in [zeek][service]) or
+        ("sstp" in [zeek][service])) {
+        mutate { id => "mutate_add_field_severity_item_vpn"
+                 add_field => { "[event][severity_tags]" => "CONNECTION_VPN" } }
     }
 
     # these (high/medium) file types pulled from extractor_override.interesting.zeek
