--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -228,24 +228,22 @@ filter {
     }
 
     # normalize service string(s)
+
+    # some services are named like blah_udp/blah_tcp/blah_data, and we don't care about the suffix
+    mutate { id => "mutate_gsub_field_zeek_conn_service_protocol_suffix"
+             gsub => [ "[zeek_cols][service]", "[_-](tcp|udp|data)\b", "" ] }
+
     if ([zeek_cols][service] =~ /^spicy_/) {
       # if it's coming from spicy, we don't care to have that in the service name
       mutate { id => "mutate_gsub_field_zeek_conn_service_spicy_prefix"
                gsub => [ "[zeek_cols][service]", "^spicy_", "" ] }
 
-      # some spicy services are named like blah_udp or blah_tcp,
-      # and we don't care about the _udp/_tcp suffix
-      mutate { id => "mutate_gsub_field_zeek_conn_service_spicy_suffix"
-               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?(_(sha|md)\d+)?$", "" ] }
-
-      if ([zeek_cols][service] == "tftp_data") {
-        mutate { id => "mutate_replace_zeek_conn_service_tftp_data"
-                 replace => { "[zeek_cols][service]" => "tftp" } }
-      }
+      mutate { id => "mutate_gsub_field_zeek_conn_service_spicy_cipher_suffix"
+               gsub => [ "[zeek_cols][service]", "(_hmac)?(_(sha|md)\d+)?$", "" ] }
     }
-    if ([zeek_cols][service] == "ftp_data") {
-      mutate { id => "mutate_replace_zeek_conn_service_ftp_data"
-               replace => { "[zeek_cols][service]" => "ftp" } }
+    if ([zeek_cols][service] =~ /^irc[_-]/) {
+      mutate { id => "mutate_replace_zeek_conn_service_irc_data"
+               replace => { "[zeek_cols][service]" => "irc" } }
     }
     if ([zeek_cols][service] == "ipsec_ike") {
       mutate { id => "mutate_replace_zeek_conn_service_ipsec_ike"
@@ -1771,7 +1769,7 @@ filter {
 
     mutate {
       id => "mutate_add_fields_zeek_krb5"
-      add_field =>  { "[zeek_cols][service]" => "krb5" }
+      add_field =>  { "[zeek_cols][service]" => "krb" }
     }
 
   } else if ([source] == "known_certs") {
@@ -1889,6 +1887,11 @@ filter {
              lowercase => [ "[zeek_cols][service]" ] }
 
     # normalize service string(s)
+
+    # some services are named like blah_udp/blah_tcp/blah_data, and we don't care about the suffix
+    mutate { id => "mutate_gsub_field_zeek_known_services_protocol_suffix"
+             gsub => [ "[zeek_cols][service]", "[_-](tcp|udp|data)\b", "" ] }
+
     if ([zeek_cols][service] =~ /^spicy_/) {
       # if it's coming from spicy, we don't care to have that in the service name
       mutate { id => "mutate_gsub_field_zeek_known_service_spicy_prefix"
@@ -1897,16 +1900,12 @@ filter {
       # some spicy services are named like blah_udp or blah_tcp,
       # and we don't care about the _udp/_tcp suffix
       mutate { id => "mutate_gsub_field_zeek_known_service_spicy_suffix"
-               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?(_(sha|md)\d+)?$", "" ] }
+               gsub => [ "[zeek_cols][service]", "(_hmac)?(_(sha|md)\d+)?$", "" ] }
 
-      if ([zeek_cols][service] == "tftp_data") {
-        mutate { id => "mutate_replace_zeek_known_service_tftp_data"
-                 replace => { "[zeek_cols][service]" => "tftp" } }
-      }
     }
-    if ([zeek_cols][service] == "ftp_data") {
-      mutate { id => "mutate_replace_zeek_known_service_ftp_data"
-               replace => { "[zeek_cols][service]" => "ftp" } }
+    if ([zeek_cols][service] =~ /^irc[_-]/) {
+      mutate { id => "mutate_replace_zeek_known_services_irc_data"
+               replace => { "[zeek_cols][service]" => "irc" } }
     }
     if ([zeek_cols][service] == "ipsec_ike") {
       mutate { id => "mutate_replace_zeek_known_service_ipsec_ike"
