--- a/logstash/maps/malcolm_severity.yaml
+++ b/logstash/maps/malcolm_severity.yaml
@@ -5,6 +5,8 @@
 "CONNECTION_OUTBOUND": 20
 "CONNECTION_TUNNEL": 10
 "CONNECTION_VPN": 30
+"CONNECTION_SIZE": 20
+"CONNECTION_DURATION": 20
 "DOMAIN_HIGH_ENTROPY": 0
 "FILE_TYPE": 0
 "FILE_TYPE_HIGH": 75
