--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -222,6 +222,48 @@ filter {
       }
     }
 
+    # check for large connection size
+    if ([totDataBytes]) or ([totBytes]) {
+      ruby {
+        id => "ruby_add_field_severity_total_bytes"
+        init => "mbSeverityThreshold = ENV['TOTAL_MEGABYTES_SEVERITY_THRESHOLD'] || '1000' ; $bytesSeverityThreshold = Integer(mbSeverityThreshold) * 1000000"
+        code => "
+          totDataBytes = event.get('[totDataBytes]')
+          totBytes = event.get('[totBytes]')
+          highBytes = [totDataBytes.nil? ? 0 : Integer(totDataBytes),
+                       totBytes.nil? ? 0 : Integer(totBytes)].max
+          if ($bytesSeverityThreshold > 0) and (highBytes >= $bytesSeverityThreshold) then
+            sevtags = Array.new unless (sevtags = event.get('[event][severity_tags]'))
+            if !sevtags.kind_of?(Array) then
+              newtags = Array.new
+              newtags.push(sevtags)
+              sevtags = newtags
+            end
+            sevtags.push('CONNECTION_SIZE')
+            event.set('[event][severity_tags]', sevtags)
+          end"
+      }
+    }
+
+    # check for long connection duration
+    if ([length]) {
+      ruby {
+        id => "ruby_add_field_severity_duration"
+        init => "secSeverityThreshold = ENV['CONNECTION_SECONDS_SEVERITY_THRESHOLD'] || '3600' ; $msSeverityThreshold = Integer(secSeverityThreshold) * 1000"
+        code => "
+          if ($msSeverityThreshold > 0) and (event.get('[length]') >= $msSeverityThreshold) then
+            sevtags = Array.new unless (sevtags = event.get('[event][severity_tags]'))
+            if !sevtags.kind_of?(Array) then
+              newtags = Array.new
+              newtags.push(sevtags)
+              sevtags = newtags
+            end
+            sevtags.push('CONNECTION_DURATION')
+            event.set('[event][severity_tags]', sevtags)
+          end"
+      }
+    }
+
     # assign score to signatures based on engine
     if ([zeek_signatures]) {
       if ([zeek_signatures][engine] == 'capa') {
