--- a/logstash/maps/malcolm_severity.yaml
+++ b/logstash/maps/malcolm_severity.yaml
@@ -7,6 +7,7 @@
 "CONNECTION_VPN": 30
 "CONNECTION_SIZE": 20
 "CONNECTION_DURATION": 20
+"QUESTIONABLE_COUNTRY": 40
 "DOMAIN_HIGH_ENTROPY": 0
 "FILE_TYPE": 0
 "FILE_TYPE_HIGH": 75
