--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -33,6 +33,31 @@ filter {
       }
     }
 
+    # traffic to/from suspicious country codes
+    if ([srcGEO]) or ([dstGEO]) or ([dns][GEO]) {
+      ruby {
+        id => "ruby_add_field_severity_geo"
+        init => "countriesStr = ENV['QUESTIONABLE_COUNTRY_CODES'] || 'CN,KP,KR,RU,UA' ; $countries = countriesStr.gsub(/\s+/, '').upcase.split(',')"
+        code => "
+          srcGEOs = event.get('[srcGEO]')
+          dstGEOs = event.get('[dstGEO]')
+          dnsGEOs = event.get('[dns][GEO]')
+          allGEOs = [srcGEOs.nil? ? [] : (srcGEOs.kind_of?(Array) ? srcGEOs : [srcGEOs]),
+                     dstGEOs.nil? ? [] : (dstGEOs.kind_of?(Array) ? dstGEOs : [dstGEOs]),
+                     dnsGEOs.nil? ? [] : (dnsGEOs.kind_of?(Array) ? dnsGEOs : [dnsGEOs])].flatten
+          if (!((allGEOs & $countries).empty?)) then
+            sevtags = Array.new unless (sevtags = event.get('[event][severity_tags]'))
+            if !sevtags.kind_of?(Array) then
+              newtags = Array.new
+              newtags.push(sevtags)
+              sevtags = newtags
+            end
+            sevtags.push('QUESTIONABLE_COUNTRY')
+            event.set('[event][severity_tags]', sevtags)
+          end"
+      }
+    }
+
     # tunneled/VPN traffic
     if ([zeek][logType] == "tunnel") {
       mutate { id => "mutate_add_field_severity_item_tunnel"
