--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -231,7 +231,7 @@ filter {
 
     # some services are named like blah_udp/blah_tcp/blah_data, and we don't care about the suffix
     mutate { id => "mutate_gsub_field_zeek_conn_service_protocol_suffix"
-             gsub => [ "[zeek_cols][service]", "[_-](tcp|udp|data)\b", "" ] }
+             gsub => [ "[zeek_cols][service]", "[_-](tcp|udp|data)", "" ] }
 
     if ([zeek_cols][service] =~ /^spicy_/) {
       # if it's coming from spicy, we don't care to have that in the service name
@@ -248,6 +248,10 @@ filter {
     if ([zeek_cols][service] == "ipsec_ike") {
       mutate { id => "mutate_replace_zeek_conn_service_ipsec_ike"
                replace => { "[zeek_cols][service]" => "ipsec" } }
+    }
+    if ([zeek_cols][service] == "rdpeudp") {
+      mutate { id => "mutate_replace_zeek_conn_service_rdpeudp"
+               replace => { "[zeek_cols][service]" => "rdp" } }
     }
 
     mutate { id => "mutate_add_field_zeek_conn_segmentCnt"
@@ -1890,7 +1894,7 @@ filter {
 
     # some services are named like blah_udp/blah_tcp/blah_data, and we don't care about the suffix
     mutate { id => "mutate_gsub_field_zeek_known_services_protocol_suffix"
-             gsub => [ "[zeek_cols][service]", "[_-](tcp|udp|data)\b", "" ] }
+             gsub => [ "[zeek_cols][service]", "[_-](tcp|udp|data)", "" ] }
 
     if ([zeek_cols][service] =~ /^spicy_/) {
       # if it's coming from spicy, we don't care to have that in the service name
@@ -1910,6 +1914,10 @@ filter {
     if ([zeek_cols][service] == "ipsec_ike") {
       mutate { id => "mutate_replace_zeek_known_service_ipsec_ike"
                replace => { "[zeek_cols][service]" => "ipsec" } }
+    }
+    if ([zeek_cols][service] == "rdpeudp") {
+      mutate { id => "mutate_replace_zeek_known_service_rdpeudp"
+               replace => { "[zeek_cols][service]" => "rdp" } }
     }
 
   } else if ([source] == "ldap") {
