work on idaholab/Malcolm#19, severity tagging for GEO countries

--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -37,7 +37,7 @@ filter {
     if ([srcGEO]) or ([dstGEO]) or ([dns][GEO]) {
       ruby {
         id => "ruby_add_field_severity_geo"
-        init => "countriesStr = ENV['QUESTIONABLE_COUNTRY_CODES'] || 'CN,KP,KR,RU,UA' ; $countries = countriesStr.gsub(/\s+/, '').upcase.split(',')"
+        init => "countriesStr = ENV['QUESTIONABLE_COUNTRY_CODES'] || 'CN,KP,RU,UA' ; $countries = countriesStr.gsub(/\s+/, '').upcase.split(',')"
         code => "
           srcGEOs = event.get('[srcGEO]')
           dstGEOs = event.get('[dstGEO]')
@@ -398,9 +398,12 @@ filter {
         end
         if !sevtags.nil? and (sevtags.length > 0) and ($severityMappings.length > 0) then
           sevhash = Hash[sevtags.select{|key| ($severityMappings[key].nil? ? 0 : $severityMappings[key]) > 0}.map{|key| [key, $severityMappings[key]]}]
-          sevnum = [sevhash.values.sum, 100].min
+          sevnum = sevhash.values.sum
           if (sevnum > 0) then
-            event.set('[event][severity]', sevnum)
+            sevnumNorm = [sevnum, 100].min
+            event.set('[event][risk_score]', Float(sevnum))
+            event.set('[event][risk_score_norm]', Float(sevnumNorm))
+            event.set('[event][severity]', sevnumNorm)
             event.set('[event][severity_tags]', sevhash.keys)
           else
             event.remove('[event][severity_tags]')
