--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -73,6 +73,8 @@ zeek.ts=db:zeek.ts;kind:termfield;friendly:Timestamp;help:Zeek Timestamp
 host.name=db:host.name;kind:termfield;friendly:Zeek Node;help:Zeek Node
 event.severity=db:event.severity;kind:integer;friendly:Severity;help:Severity
 event.severity_tags=db:event.severity_tags;kind:termfield;friendly:Severity Tags;help:Severity Tags
+event.risk_score=db:event.risk_score;kind:termfield;friendly:Risk Score;help:Risk Score
+event.risk_score_norm=db:event.risk_score_norm;kind:termfield;friendly:Risk Score (Normalized);help:Risk Score (Normalized)
 
 # basic connection information
 zeek.orig_h=db:zeek.orig_h;kind:termfield;friendly:Originating host;help:Originating Host
