--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -291,21 +291,15 @@ filter {
 
     # assign score to signatures based on engine
     if ([zeek_signatures]) {
-      if ([zeek_signatures][engine] == 'capa') {
+      if ([zeek_signatures][engine] == 'Capa') {
         mutate { id => "mutate_add_field_severity_signatures_capa"
-                 add_field => { "[event][severity_tags]" => "File scan (capa)" } }
-      } else if ([zeek_signatures][engine] == 'clamav') {
+                 add_field => { "[event][severity_tags]" => "Signature (capa)" } }
+      } else if ([zeek_signatures][engine] == 'ClamAV') {
         mutate { id => "mutate_add_field_severity_signatures_clamav"
-                 add_field => { "[event][severity_tags]" => "File scan (ClamAV)" } }
-      } else if ([zeek_signatures][engine] == 'malass') {
-        mutate { id => "mutate_add_field_severity_signatures_malass"
-                 add_field => { "[event][severity_tags]" => "File scan (Malass)" } }
-      } else if ([zeek_signatures][engine] == 'virustotal') {
-        mutate { id => "mutate_add_field_severity_signatures_virustotal"
-                 add_field => { "[event][severity_tags]" => "File scan (VirusTotal)" } }
-      } else if ([zeek_signatures][engine] == 'yara') {
+                 add_field => { "[event][severity_tags]" => "Signature (ClamAV)" } }
+      } else if ([zeek_signatures][engine] == 'Yara') {
         mutate { id => "mutate_add_field_severity_signatures_yara"
-                 add_field => { "[event][severity_tags]" => "File scan (YARA)" } }
+                 add_field => { "[event][severity_tags]" => "Signature (YARA)" } }
       } else {
         mutate { id => "mutate_add_field_severity_signatures_other"
                  add_field => { "[event][severity_tags]" => "Signature" } }
