work on idaholab/Malcolm#19, severity dashboard

--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -291,13 +291,13 @@ filter {
 
     # assign score to signatures based on engine
     if ([zeek_signatures]) {
-      if ([zeek_signatures][engine] == 'Capa') {
+      if ('Capa' in [zeek_signatures][engine]) {
         mutate { id => "mutate_add_field_severity_signatures_capa"
                  add_field => { "[event][severity_tags]" => "Signature (capa)" } }
-      } else if ([zeek_signatures][engine] == 'ClamAV') {
+      } else if ('ClamAV' in [zeek_signatures][engine]) {
         mutate { id => "mutate_add_field_severity_signatures_clamav"
                  add_field => { "[event][severity_tags]" => "Signature (ClamAV)" } }
-      } else if ([zeek_signatures][engine] == 'Yara') {
+      } else if ('Yara' in [zeek_signatures][engine]) {
         mutate { id => "mutate_add_field_severity_signatures_yara"
                  add_field => { "[event][severity_tags]" => "Signature (YARA)" } }
       } else {
